@@ -58,6 +58,9 @@ private:
 
 	bool resize_gui;
 	QSize gui_size;
+
+	// Options to pass to gui
+	int close_at_end; // -1 = not set, 1 = true, 0 false
 };
 
 #endif
