@@ -1,5 +1,9 @@
 [b]Version 0.6.9[/b]:
 
+(2010-01-20)
+ * Now the command line options -close-at-end and -no-close-at-end don't
+   modify the preference's option "close when finished playback".
+
 (2010-01-15)
  * (Linux) Use pulse as default audio output instead of alsa, as alsa is
    causing problems (at least) in Ubuntu 9.10 when seeking on a video (image
